--- a/Present/style.css
+++ b/Present/style.css
@@ -5,6 +5,7 @@ body, html {
   min-height: 100%;
   font-family: Arial;
   background: lavenderblush;
+  overflow: hidden;
 }
 
 main {
@@ -12,15 +13,20 @@ main {
   margin: auto;
   border: 1px solid lightgray;
   height: 75vh;
-  padding: 8px;
+  padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 15px 5px;
   background: white;
+  outline: none;
 }
 
 .header {
   background: lightcoral;
   margin-bottom: 25px;
   width: 100%;
+  height: 37px;
+  display: flex;
+  overflow: auto;
+  overflow-y: hidden;
 }
 
 .header button {
@@ -42,6 +48,7 @@ main {
   padding: 0px;
   overflow: hidden;
   background-color: lightcoral;
+  height: 43px;
 }
 
 .li {
